fixed the collapsed in the hk filters and added the archive

--- a/src/components/ir-housekeeping/ir-hk-tasks/ir-tasks-filters/ir-tasks-filters.css
+++ b/src/components/ir-housekeeping/ir-hk-tasks/ir-tasks-filters/ir-tasks-filters.css
@@ -7,4 +7,7 @@
   .collapse-btn {
     display: none;
   }
+  #hkTasksFiltersCollapse.collapse:not(.show) {
+    display: block;
+  }
 }
